# internal/dto/tonrates.go
@@ -1,0 +1,8 @@
+package dto
+
+type TonRatesResponse struct {
+	USD float64 `json:"usd"`
+	EUR float64 `json:"eur"`
+	GBP float64 `json:"gbp"`
+	RUB float64 `json:"rub"`
+}
